--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   .panel { flex:1 1 360px; border:1px solid #222; border-radius:12px; padding:12px; background:#131722; }
   label { display:block; font-weight:600; margin-top:10px; }
   input[type="text"] { width:100%; padding:8px 10px; border-radius:8px; border:1px solid #333; background:#161a26; color:#fff; }
-  .btns { display:flex; gap:10px; align-items:center; margin-top:12px; flex-wrap:wrap; }
+  .btns { display:flex; gap:10px; align-items:center; margin-top:12px; flex-wrap:wrap; position:relative; z-index:5; }
   button { padding:10px 14px; border:0; border-radius:10px; background:#2a2f3d; color:#fff; cursor:pointer; }
   button:disabled { opacity:.55; cursor:not-allowed; }
   video, canvas { width:100%; border-radius:12px; background:#000; }
@@ -58,10 +58,10 @@
     </div>
 
     <div class="row" style="margin-top:10px;">
-      <div style="flex:1 1 380px;">
+      <div style="flex:1 1 380px; position:relative; z-index:1;">
         <video id="ad" controls playsinline></video>
       </div>
-      <div style="flex:1 1 220px;">
+      <div style="flex:1 1 220px; position:relative; z-index:1;">
         <video id="cam" autoplay muted playsinline style="width:100%;height:auto;"></video>
         <canvas id="overlay" style="width:100%;height:auto;"></canvas>
         <div class="muted" id="fps">— fps</div>
@@ -85,3 +85,284 @@
     </ul>
   </div>
 </div>
+
+<script>
+  // ====== Config ======
+  const MODEL_URL = './models';     // loads from your repo's /models folder
+  const SAMPLE_MS = 150;            // ~6–7 Hz
+  const BASELINE_PRE = [2.0, 0.5];  // baseline window [te-2.0, te-0.5]
+  const RESP_DUR = 2.0;             // response window [te, te+2.0]
+
+  // ====== DOM ======
+  const $ = id => document.getElementById(id);
+  const ad = $('ad'), cam = $('cam'), canv = $('overlay'), ctx = canv.getContext('2d');
+  const kPR = $('kPR'), kAWR = $('kAWR'), kPI = $('kPI'), statusEl = $('status'), fpsEl = $('fps');
+
+  // ====== State ======
+  let timer=null, running=false, frames=0, tMark=performance.now();
+  const stream=[];   // {t, att, val, aro, pos, neg, gazeX, gazeY, jitter}
+  let lastNose=null;
+
+  // ====== Utils ======
+  const clamp=(x,a,b)=>Math.min(b,Math.max(a,x));
+  const mean=a=>a.length?a.reduce((x,y)=>x+y,0)/a.length:0;
+  const peak=a=>a.length?Math.max(...a):0;
+  const std =a=>{ if(!a.length) return 0; const m=mean(a); return Math.sqrt(a.reduce((s,x)=>s+(x-m)*(x-m),0)/a.length); };
+  const norm01=(x,min,max)=> max>min?clamp((x-min)/(max-min),0,1):0;
+  const sigmoid=x=>1/(1+Math.exp(-x));
+  const parsePair = s => { const [a,b]=(s||'').split(',').map(Number); return [Number(a||0),Number(b||0)]; }
+  const parseQuad = s => { const [x,y,w,h]=(s||'').split(',').map(Number); return {x:x||0,y:y||0,w:w||0,h:h||0}; }
+  const inBox=(x,y,b)=> x>=b.x && x<=b.x+b.w && y>=b.y && y<=b.y+b.h;
+
+  // ====== Face feature helpers ======
+  function eyeAspectRatio(p, ids){
+    const v = (p[ids[1]].y - p[ids[5]].y + p[ids[2]].y - p[ids[4]].y)/2;
+    const h = (p[ids[3]].x - p[ids[0]].x);
+    return Math.max(0, v/(Math.abs(h)+1e-5));
+  }
+  function featuresFromLandmarks(det){
+    const p = det.landmarks.positions;
+    const earL = eyeAspectRatio(p,[36,37,38,39,40,41]);
+    const earR = eyeAspectRatio(p,[42,43,44,45,46,47]);
+    const eyesOpen = clamp((earL+earR)/2 * 12, 0, 1);
+
+    const nose = p[30], left=p[2], right=p[14], top=p[27], bottom=p[8];
+    const cx=(left.x+right.x)/2, cy=(top.y+bottom.y)/2;
+    const yaw  = clamp((nose.x-cx)/(Math.abs(right.x-left.x)+1e-5), -0.6, 0.6);
+    const pitch= clamp((nose.y-cy)/(Math.abs(bottom.y-top.y)+1e-5), -0.6, 0.6);
+
+    const gazeX = clamp(0.5 + yaw * -0.9, 0, 1);
+    const gazeY = clamp(0.5 + pitch *  0.9, 0, 1);
+
+    let jitter=0; if (lastNose) jitter=Math.hypot(nose.x-lastNose.x, nose.y-lastNose.y);
+    lastNose = {x:nose.x,y:nose.y};
+
+    return { eyesOpen, gazeX, gazeY, jitter };
+  }
+  function valenceFromExpr(e){
+    const pos = e.happy||0, neg=(e.angry||0)+(e.sad||0)+(e.disgusted||0);
+    return clamp(pos - neg, -1, 1);
+  }
+  function arousalFromExpr(e){
+    const act = (e.surprised||0) + (e.fearful||0) + (e.angry||0) + (e.happy||0)*0.5;
+    return clamp(act, 0, 1);
+  }
+  const attentionScore = eyesOpen => clamp(eyesOpen,0,1);
+
+  // ====== Windows & deltas ======
+  function windowSlice(t0,t1){ return stream.filter(r=>r.t>=t0 && r.t<t1); }
+  function windowStats(t0,t1,key){
+    const arr = windowSlice(t0,t1).map(r=>r[key]);
+    return { mean: mean(arr), peak: peak(arr), std: std(arr) };
+  }
+  function deltaFeature(te, key){
+    const base0 = te - BASELINE_PRE[0], base1 = te - BASELINE_PRE[1];
+    const base = windowStats(base0, base1, key);
+    const resp = windowStats(te, te + RESP_DUR, key);
+    return { dMean: resp.mean - base.mean, dPeak: resp.peak - base.peak, base, resp };
+  }
+  function gazeDwell(te, box, dur=2.0){
+    const pts = windowSlice(te, te+dur);
+    const hits = pts.filter(p=>inBox(p.gazeX, p.gazeY, box)).length;
+    return hits / Math.max(1, pts.length);
+  }
+  function firstFixLatency(te, box, maxDur=1.5){
+    const pts = windowSlice(te, te+maxDur);
+    const hit = pts.find(p=>inBox(p.gazeX, p.gazeY, box));
+    return hit ? (hit.t - te) : maxDur;
+  }
+
+  // ====== KPI scoring ======
+  function engagementIndex(t0, dur, roiCTA){
+    const eyes = windowStats(t0, t0+dur, 'att').mean;
+    const dwell = gazeDwell(t0, roiCTA, dur);
+    const jitterStd = std( windowSlice(t0, t0+dur).map(r=>r.jitter) );
+    const jitterN = clamp(1 - norm01(jitterStd, 0.2, 2.0), 0, 1);
+    return 0.5*dwell + 0.3*eyes + 0.2*jitterN;
+  }
+  function computeKPIs(winLogo, winPack, winCTA, roiLogo, roiPack, roiCTA){
+    const tLogo = winLogo[0], tPack = winPack[0], tCTA = winCTA[0];
+
+    const dV_logo = deltaFeature(tLogo, 'val');
+    const dV_pack = deltaFeature(tPack, 'val');
+    const smile_logo_peak = windowStats(tLogo, tLogo+RESP_DUR, 'pos').peak;
+    const neg_logo_peak   = windowStats(tLogo, tLogo+RESP_DUR, 'neg').peak;
+    const gaze_logo = gazeDwell(tLogo, roiLogo, RESP_DUR);
+
+    const baseAll = windowStats(0, Math.max(0.1, tLogo), 'val');
+    const z = (x, m=baseAll.mean, s=0.2)=> s>1e-6 ? (x-m)/(s||0.2) : 0;
+
+    const PR = 100/(1+Math.exp(-(
+      0.9*z(dV_logo.dMean, 0, 0.25) +
+      0.5*z(dV_pack.dMean, 0, 0.25) +
+      0.4*z(smile_logo_peak, 0.15, 0.2) +
+      0.3*z(gaze_logo, 0.2, 0.25) -
+      0.4*z(neg_logo_peak, 0.1, 0.2)
+    )));
+
+    const dwell_logo = gazeDwell(tLogo, roiLogo, RESP_DUR);
+    const lat_logo   = firstFixLatency(tLogo, roiLogo, 1.5);
+    const dA_logo    = deltaFeature(tLogo, 'aro').dMean;
+
+    const AWR = 100/(1+Math.exp(-(
+      0.6*z(dwell_logo, 0.2, 0.25) +
+      0.5*z(-lat_logo, -0.8, 0.4) +
+      0.4*z(dA_logo, 0, 0.25)
+    )));
+
+    const wCTA = windowStats(tCTA, tCTA+Math.max(2.5, RESP_DUR), 'val');
+    const v_cta = wCTA.mean;
+    const v_cta_pk = wCTA.peak;
+    const eng_cta = engagementIndex(tCTA, Math.max(2.5, RESP_DUR), roiCTA);
+    const neg_cta = windowStats(tCTA, tCTA+Math.max(2.5, RESP_DUR), 'neg').peak;
+
+    const PI = 100/(1+Math.exp(-(
+      0.8*z(v_cta,  0, 0.3) +
+      0.5*z(eng_cta, 0.3, 0.25) +
+      0.3*z(v_cta_pk,0.15,0.2) -
+      0.5*z(neg_cta, 0.1, 0.2)
+    )));
+
+    return { PR:+PR.toFixed(1), AWR:+AWR.toFixed(1), PI:+PI.toFixed(1) };
+  }
+
+  // ====== CSV/JSON export ======
+  function toCSV(rows){
+    const header = ['t','att','val','aro','pos','neg','gazeX','gazeY','jitter'];
+    const lines = [header.join(',')];
+    rows.forEach(r => lines.push([r.t,r.att,r.val,r.aro,r.pos,r.neg,r.gazeX,r.gazeY,r.jitter].map(x=>typeof x==='number'?x.toFixed(4):x).join(',')));
+    return lines.join('\n');
+  }
+  function download(name, text, type='text/plain'){
+    const blob = new Blob([text], {type});
+    const a = document.createElement('a');
+    a.href = URL.createObjectURL(blob); a.download = name; a.click();
+    URL.revokeObjectURL(a.href);
+  }
+
+  // ====== Wire up buttons ======
+  $('btnLoadModels').addEventListener('click', async () => {
+    statusEl.textContent = 'Loading models…';
+    try {
+      await faceapi.nets.tinyFaceDetector.loadFromUri(MODEL_URL);
+      await faceapi.nets.faceLandmark68Net.loadFromUri(MODEL_URL);
+      await faceapi.nets.faceExpressionNet.loadFromUri(MODEL_URL);
+      statusEl.textContent = 'Models loaded. Start webcam.';
+      $('btnCam').disabled = false;
+    } catch (e) {
+      console.error('Model load error', e);
+      statusEl.textContent = 'Model load failed. Check /models files & names.';
+      alert('Model load failed. Open DevTools > Console to see details.');
+    }
+  });
+
+  $('btnCam').addEventListener('click', async () => {
+    try{
+      const st = await navigator.mediaDevices.getUserMedia({ video:{facingMode:'user', width:{ideal:640}, height:{ideal:480}}, audio:false });
+      cam.srcObject = st; await cam.play();
+      canv.width = cam.videoWidth || 640; canv.height = cam.videoHeight || 480;
+      statusEl.textContent = 'Webcam ready. Enter ad URL and press Play & analyze.';
+      $('btnPlay').disabled = false;
+    }catch(e){
+      statusEl.textContent = 'Camera error: ' + e.message;
+    }
+  });
+
+  // ====== Sampling loop ======
+  let samplingTimer=null, framesCount=0, fpsT0=performance.now();
+  async function sampleOnce(){
+    try{
+      const det = await faceapi
+        .detectSingleFace(cam, new faceapi.TinyFaceDetectorOptions({inputSize:320, scoreThreshold:0.4}))
+        .withFaceLandmarks().withFaceExpressions();
+
+      ctx.clearRect(0,0,canv.width,canv.height);
+      if (det){
+        const res = faceapi.resizeResults(det, { width: canv.width, height: canv.height });
+        faceapi.draw.drawDetections(canv, res);
+        faceapi.draw.drawFaceLandmarks(canv, res);
+        // faceapi.draw.drawFaceExpressions(canv, res); // optional
+
+        const feats = featuresFromLandmarks(det);
+        const e = det.expressions || {};
+        const att = attentionScore(feats.eyesOpen);
+        const val = valenceFromExpr(e);
+        const aro = arousalFromExpr(e);
+        const pos = (e.happy||0);
+        const neg = (e.angry||0)+(e.sad||0)+(e.disgusted||0);
+
+        stream.push({
+          t: +ad.currentTime.toFixed(3),
+          att, val, aro, pos, neg,
+          gazeX: feats.gazeX, gazeY: feats.gazeY,
+          jitter: feats.jitter
+        });
+      }
+      // FPS
+      framesCount++; const now = performance.now();
+      if (now - fpsT0 > 1000){ fpsEl.textContent = framesCount + ' fps'; framesCount=0; fpsT0 = now; }
+    }catch(e){ /* ignore intermittent errors */ }
+  }
+
+  function startSampling(){
+    stream.length = 0; lastNose = null;
+    samplingTimer = setInterval(sampleOnce, SAMPLE_MS);
+  }
+  function stopSampling(){
+    clearInterval(samplingTimer); samplingTimer = null;
+  }
+
+  // ====== Play & analyze ======
+  $('btnPlay').addEventListener('click', async () => {
+    const url = $('adUrl').value.trim();
+    if (!url){ statusEl.textContent = 'Enter a valid Ad URL (e.g., ads/my_ad.mp4)'; return; }
+    ad.src = url; await ad.play().catch(()=>{});
+    startSampling();
+    statusEl.textContent = 'Recording…';
+
+    ad.onpause = () => { statusEl.textContent = 'Paused'; };
+    ad.onended = () => {
+      stopSampling();
+      statusEl.textContent = 'Analyzing…';
+      analyzeAndShow();
+    };
+  });
+
+  function analyzeAndShow(){
+    const [logoS, logoE] = parsePair($('logoWin').value);
+    const [packS, packE] = parsePair($('packWin').value);
+    const [ctaS,  ctaE ] = parsePair($('ctaWin').value);
+
+    const roiLogo = parseQuad($('logoRoi').value);
+    const roiPack = parseQuad($('packRoi').value);
+    const roiCTA  = parseQuad($('ctaRoi').value);
+
+    if (!stream.length){ statusEl.textContent = 'No samples captured.'; return; }
+
+    const KPIs = computeKPIs([logoS,logoE],[packS,packE],[ctaS,ctaE], roiLogo, roiPack, roiCTA);
+    kPR.textContent  = KPIs.PR.toString();
+    kAWR.textContent = KPIs.AWR.toString();
+    kPI.textContent  = KPIs.PI.toString();
+    statusEl.textContent = 'Done. Export results below.';
+    $('btnCSV').disabled = false; $('btnJSON').disabled = false;
+  }
+
+  // Exports
+  $('btnCSV').addEventListener('click', () => {
+    const csv = toCSV(stream);
+    download(`frames_${Date.now()}.csv`, csv, 'text/csv');
+  });
+  $('btnJSON').addEventListener('click', () => {
+    const [logoS, logoE] = parsePair($('logoWin').value);
+    const [packS, packE] = parsePair($('packWin').value);
+    const [ctaS,  ctaE ] = parsePair($('ctaWin').value);
+    const roiLogo = parseQuad($('logoRoi').value);
+    const roiPack = parseQuad($('packRoi').value);
+    const roiCTA  = parseQuad($('ctaRoi').value);
+    const KPIs = computeKPIs([logoS,logoE],[packS,packE],[ctaS,ctaE], roiLogo, roiPack, roiCTA);
+    const out = { meta:{ ts:Date.now(), ad:$('adUrl').value }, kpi: KPIs, frames: stream };
+    download(`report_${Date.now()}.json`, JSON.stringify(out,null,2), 'application/json');
+  });
+</script>
+</body>
+</html>
